apploadbalancer-eks-steps/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "nginx-service"
  namespace: "default"
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: "nginx"
