apploadbalancer-eks-steps/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    #    alb.ingress.kubernetes.io/certificate-arn: ${eks_cerificate_arn}
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - host: lgmtest.com
    http:
      paths:
      - backend:
          serviceName: nginx-service
          servicePort: 80
